infrastructure/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sru-portal-backend-svc
spec:
  selector:
    app: sru-portal-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
